--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,12 @@
-name: Playwright Tests
+name: Playwright Tests - SaaSBuilder
 permissions:
   contents: read
   actions: write
+
 on:
-  push:
-    branches: [ master ]
+  schedule:
+    # 6:00 PM IST - Monday to Friday
+    - cron: '30 12 * * 1-5'
   pull_request:
     types: [ labeled ]
   workflow_dispatch:
@@ -16,7 +18,9 @@ on:
 
 jobs:
   test:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge'))
+    name: Playwright Tests - SaaSBuilder
+    # Run on schedule, manual trigger, or when PR has "ready to merge" label
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge'))
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -66,3 +70,21 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 7
+  
+  notification:
+    name: Notify Mattermost
+    runs-on: ubuntu-latest
+    needs: test
+    if: always()
+    steps:
+      - uses: mattermost/action-mattermost-notify@master
+        with:
+          MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
+          MATTERMOST_CHANNEL: 'Playwright Notifications'
+          TEXT:
+            ${{ 
+              needs.test.result == 'success' && '✅ SaaSBuilder tests passed!' || 
+              needs.test.result == 'failure' && '❌ SaaSBuilder tests failed!' || 
+              needs.test.result == 'cancelled' && '⚠️ SaaSBuilder tests were cancelled!' || 
+              'ℹ️ SaaSBuilder tests completed with status ' + needs.test.result 
+            }}
