--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -88,7 +88,7 @@ jobs:
     name: Notify Commits on Mattermost
     runs-on: ubuntu-latest
     needs: test
-    if: needs.test.result == 'failure'
+    if: always() && needs.test.result != 'success'
     steps:
       - uses: actions/checkout@v4
         with:
