--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,8 +19,8 @@ on:
 jobs:
   test:
     name: Playwright Tests - SaaSBuilder
-    # Run on schedule, manual trigger, or when PR has "ready to merge" label
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge'))
+    # Run on schedule, manual trigger, or when PR has "ready to merge" label AND is not from a fork
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge') && github.event.pull_request.head.repo.full_name == github.repository)
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -75,20 +75,20 @@ jobs:
     name: Notify Mattermost
     runs-on: ubuntu-latest
     needs: test
-    if: always()
+    if: always() && (needs.test.result == 'success' || needs.test.result == 'failure' || needs.test.result == 'cancelled')
     steps:
       - name: Mattermost Notification
         uses: tferreira/matterfy@v1.9
         with:
           type: ${{ needs.test.result }}
           job_name: '*Playwright Tests - SaaSBuilder*'
-          url: https://app.instance-6icq0s1ac.us-east-2.aws.omnistrate.cloud/hooks/ogzbx3i3mtbwfqipae5hn4h94e
+          url: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
 
   mattermost-notification-2:
     name: Notify Commits on Mattermost
     runs-on: ubuntu-latest
     needs: test
-    if: always() && needs.test.result != 'success'
+    if: always() && (needs.test.result == 'failure' || needs.test.result == 'cancelled')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -116,4 +116,4 @@ jobs:
 
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":$MESSAGE_JSON}" \
-          https://app.instance-6icq0s1ac.us-east-2.aws.omnistrate.cloud/hooks/ogzbx3i3mtbwfqipae5hn4h94e
+          ${{ secrets.MATTERMOST_WEBHOOK_URL }}
