--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,8 +19,11 @@ on:
 jobs:
   test:
     name: Playwright Tests - SaaSBuilder
-    # Run on schedule, manual trigger, or when PR has "ready to merge" label AND is not from a fork
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge') && github.event.pull_request.head.repo.full_name == github.repository)
+    # Run tests only if not paused and on specific events
+    if: |
+      (github.event_name == 'schedule' && vars.PAUSE_PLAYWRIGHT_TESTS != 'true' && github.event.pull_request.head.repo.full_name == github.repository) ||
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge'))
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
