--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -42,6 +42,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      # ----- Guardrails: reclaim & inspect disk space -----
+      - name: Show disk usage (pre)
+        run: |
+          df -h
+          du -h -d1 "${{ github.workspace }}" 2>/dev/null | sort -h || true
+          docker system df -v || true
+
+      - uses: easimon/maximize-build-space@v10
+        with:
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          root-reserve-mb: 1024
+
+      - name: Prune Docker (images/containers/volumes/cache)
+        run: docker system prune -af --volumes || true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -73,9 +92,15 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Show disk usage (post)
+        if: always()
+        run: |
+          df -h
+          docker system df -v || true          
                   
   package-multi-arch:
-    if: ${{ github.event_name != 'pull_request' }}
+    if: ${{ github.event_name == 'release' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -91,6 +116,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      # ----- Guardrails: reclaim & inspect disk space -----
+      - name: Show disk usage (pre)
+        run: |
+          df -h
+          du -h -d1 "${{ github.workspace }}" 2>/dev/null | sort -h || true
+          docker system df -v || true
+
+      - uses: easimon/maximize-build-space@v10
+        with:
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          root-reserve-mb: 1024
+
+      - name: Prune Docker (images/containers/volumes/cache)
+        run: docker system prune -af --volumes || true        
         
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
@@ -156,6 +200,12 @@ jobs:
         run: cosign sign --yes ${TAGS}
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
+
+      - name: Show disk usage (post)
+        if: always()
+        run: |
+          df -h
+          docker system df -v || true          
 
   tag:
     if: github.event_name == 'push'
