--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,8 +15,6 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  # platforms to build the image for
-  PLATFORMS: linux/amd64, linux/arm64
   # default platform of the runners, used to mitigate time of building on x arch during PRs
   PR_PLATFORMS: linux/amd64
 
@@ -41,12 +39,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: ${{ env.PLATFORMS }}
+          platforms: ${{ env.PR_PLATFORMS }}
 
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
@@ -75,8 +73,16 @@ jobs:
           cache-to: type=gha,mode=max
 
   package-multi-arch:
-    if: ${{ github.event_name == 'release' }}
-    runs-on: ubicloud-standard-8
+    name: Package customer portal ${{ matrix.platform }}
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - runner: ubicloud-standard-8
+            platform: linux/amd64
+          - runner: ubicloud-standard-8-arm
+            platform: linux/arm64
     permissions:
       contents: read
       packages: write
@@ -90,24 +96,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Install the cosign tool except on PR
-      # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name == 'release'
-        timeout-minutes: 5
-        uses: sigstore/cosign-installer@main
-
-      - name: Set up QEMU
-        timeout-minutes: 5
-        uses: docker/setup-qemu-action@v3
+        uses: actions/checkout@v6
 
       - name: Set up Docker Buildx
         timeout-minutes: 5
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: ${{ env.PLATFORMS }}
+          platforms: ${{ matrix.platform }}
 
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
@@ -134,24 +129,95 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push multi-arch
-        timeout-minutes: 60
-        if: ${{ github.event_name != 'pull_request' }}
+      - name: Build and push ${{ matrix.platform }} by digest
+        id: build
+        timeout-minutes: 30
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          platforms: ${{ env.PLATFORMS }}
+          platforms: ${{ matrix.platform }}
           push: ${{ github.event_name == 'release' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: Upload digest
+        if: github.event_name == 'release'
+        uses: actions/upload-artifact@v5
+        with:
+          name: digests-${{ matrix.runner }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs:
+      - package-multi-arch
+    steps:
+      - name: Download digest
+        uses: actions/download-artifact@v6
+        with:
+          pattern: digests-*
+          merge-multiple: true
+          path: /tmp/digests
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha,format=long
+
+      # Login against a Docker registry
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name == 'release'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create manifest list and push
+        if: github.event_name == 'release'
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+
+      - name: Inspect image
+        if: github.event_name == 'release'
+        run: |
+          docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+
+      # Install the cosign tool except on PR
+      # https://github.com/sigstore/cosign-installer
+      - name: Install cosign
+        if: github.event_name == 'release'
+        uses: sigstore/cosign-installer@main
 
       # Sign the resulting Docker image digest except on PRs.
       # https://github.com/sigstore/cosign
       - name: Sign the images with GitHub OIDC Token **not production ready**
-        timeout-minutes: 5
         if: github.event_name == 'release'
         run: cosign sign --yes ${TAGS}
         env:
@@ -166,7 +232,7 @@ jobs:
       group: Tag-'${{ github.workflow }}'
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Bump version and push tag
         id: tag_version
