--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,10 +28,6 @@ jobs:
     runs-on: ubicloud-standard-2
     permissions:
       contents: read
-      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
 
     concurrency:
       group: package-${{ github.workflow }}-${{ github.head_ref }}
@@ -86,9 +82,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
 
     concurrency:
       group: package-multi-arch-${{ github.workflow }}-${{ github.head_ref }}
@@ -163,6 +156,12 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - package-multi-arch
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
     steps:
       - name: Download digest
         uses: actions/download-artifact@v6
