--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -69,7 +69,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   package-multi-arch:
-    name: Package customer portal ${{ matrix.platform }}
+    name: Package customer portal ${{ matrix.platform && fromJson('["' + matrix.platform + '"]')[0].split('/')[1] }}  
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
@@ -84,7 +84,7 @@ jobs:
       packages: write
 
     concurrency:
-      group: package-multi-arch-${{ github.workflow }}-${{ github.head_ref }}
+      group: package-${{ matrix.platform }}-${{ github.workflow }}
       cancel-in-progress: false
 
     steps:
@@ -135,7 +135,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true
 
       - name: Export digest
         run: |
