--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -69,7 +69,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   package-multi-arch:
-    name: Package customer portal ${{ matrix.platform && fromJson('["' + matrix.platform + '"]')[0].split('/')[1] }}  
+    name: Package customer portal ${{ matrix.platform }}
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
