--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       deploy_target:
-        description: 'Deploy target'
+        description: "Deploy target"
         required: true
         type: string
-        default: 'master'
+        default: "master"
 
 jobs:
   create-and-merge-deploy-pr:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - name: "trigger deploy trial when diff exists and status check passed"
@@ -36,9 +36,9 @@ jobs:
             echo 'git diff failed unexpectedly.'
             exit 1
           fi
-          
+
           # Add some logic to check if the latest CI status is success.
-          
+
           # Create a PR
           pr_url=$( \
             gh pr create \
