--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -70,6 +70,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   package-multi-arch:
+    if: github.event_name == 'release'
     name: Package customer portal ${{ matrix.platform }}
     runs-on: ${{ matrix.runner }}
     strategy:
@@ -152,7 +153,9 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge:
+  merge-multi-arch-digest:
+    if: github.event_name == 'release'
+    name: Merge multi-arch digest and sign
     runs-on: ubuntu-latest
     needs:
       - package-multi-arch
@@ -162,6 +165,7 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+
     steps:
       - name: Download digest
         uses: actions/download-artifact@v6
