--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,11 +4,10 @@ permissions:
   actions: write
 
 on:
-  schedule:
-    # 6:00 PM IST - Monday to Friday
-    - cron: "30 12 * * 1-5"
   pull_request:
-    types: [labeled]
+    branches:
+      - master
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
     inputs:
       reason:
@@ -19,11 +18,7 @@ on:
 jobs:
   test:
     name: Playwright Tests - SaaSBuilder
-    # Run tests only if not paused and on specific events
-    if: |
-      (github.event_name == 'schedule' && vars.PAUSE_PLAYWRIGHT_TESTS != 'true') ||
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && contains(github.event.label.name, 'ready to merge'))
+    if: github.event.pull_request.draft == false
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -73,50 +68,3 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 7
-
-  mattermost-notification-1:
-    name: Notify Mattermost
-    runs-on: ubuntu-latest
-    needs: test
-    if: always() && (needs.test.result == 'success' || needs.test.result == 'failure' || needs.test.result == 'cancelled')
-    steps:
-      - name: Mattermost Notification
-        uses: tferreira/matterfy@v1.9
-        with:
-          type: ${{ needs.test.result }}
-          job_name: "*Playwright Tests - SaaSBuilder*"
-          url: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
-
-  mattermost-notification-2:
-    name: Notify Commits on Mattermost
-    runs-on: ubuntu-latest
-    needs: test
-    if: always() && (needs.test.result == 'failure' || needs.test.result == 'cancelled')
-    steps:
-      - uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
-
-      - name: Mattermost Notification
-        run: |
-          # Get commits since last successful workflow run
-          # This gets commits from the last 8 hours as a fallback approach
-          SINCE_DATE=$(date -d '8 hours ago' --iso-8601)
-          COMMITS=$(git log --oneline --since="$SINCE_DATE" --pretty=format:"• %h %s (%an)")
-
-          # If no commits in last 8 hours, get last 3 commits
-          if [ -z "$COMMITS" ]; then
-            COMMITS=$(git log --oneline -3 --pretty=format:"• %h %s (%an)")
-          fi
-
-          MESSAGE="❌ @channel SaaSBuilder Playwright tests failed! Please investigate immediately.
-
-          **Recent commits:**
-          $COMMITS"
-
-          # Escape the message for JSON
-          MESSAGE_JSON=$(echo "$MESSAGE" | jq -Rs .)
-
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":$MESSAGE_JSON}" \
-          ${{ secrets.MATTERMOST_WEBHOOK_URL }}
