--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.23",
     "monaco-editor": "^0.52.0",
-    "next": "15.6.0-canary.61",
+    "next": "16.1.5",
     "next-nprogress-bar": "^2.4.3",
     "next-plugin-yaml": "^1.0.1",
     "node-cron": "^3.0.3",
@@ -113,6 +113,7 @@
     "glob": "10.5.0",
     "js-yaml": "4.1.1",
     "qs": "6.14.1",
-    "lodash": "4.17.23"
+    "lodash": "4.17.23",
+    "lodash-es": "4.17.23"
   }
 }
