--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "lodash": "4.17.23",
     "lodash-es": "4.17.23",
     "minimatch": ">=3.1.3",
-    "ajv": ">=6.14.0"
+    "ajv": ">=6.14.0",
+    "basic-ftp": "5.2.0"
   }
 }
