--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lodash": "^4.17.23",
     "monaco-editor": "^0.52.0",
     "next": "16.1.5",
-    "next-mdx-remote": "^6.0.0",
+
     "next-nprogress-bar": "^2.4.3",
     "next-plugin-yaml": "^1.0.1",
     "node-cron": "^3.0.3",
@@ -117,8 +117,8 @@
     "axios": "1.13.5",
     "lodash": "4.17.23",
     "lodash-es": "4.17.23",
-    "minimatch": ">=3.1.3",
-    "ajv": ">=6.14.0",
+    "minimatch": "^3.1.3",
+    "ajv": "^6.14.0",
     "basic-ftp": "5.2.0"
   }
 }
