--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "lodash": "^4.17.23",
     "monaco-editor": "^0.52.0",
     "next": "16.1.5",
-
     "next-nprogress-bar": "^2.4.3",
     "next-plugin-yaml": "^1.0.1",
     "node-cron": "^3.0.3",
@@ -114,10 +113,9 @@
     "glob": "10.5.0",
     "js-yaml": "4.1.1",
     "qs": "6.14.2",
-    "axios": "1.13.5",
     "lodash": "4.17.23",
     "lodash-es": "4.17.23",
-    "minimatch": "^3.1.3",
+    "minimatch": "5.1.7",
     "ajv": "^6.14.0",
     "basic-ftp": "5.2.0"
   }
